--- a/training_run.ipynb
+++ b/training_run.ipynb
@@ -55,7 +55,7 @@
     "        'best': {\n",
     "            'params':          None,\n",
     "            'f1_val':          0.0,    # CV macro-F1 on training\n",
-    "            'threshold':       0.5,    # best threshold found on validation\n",
+    "            'threshold':       0.5,    # chosen threshold from validation\n",
     "            'f1_val_thresh':   0.0,    # macro-F1 on validation at that threshold\n",
     "            'f1_test':         0.0,    # macro-F1 on test at that threshold\n",
     "            'model_path':      None\n",
@@ -68,7 +68,6 @@
     "        os.makedirs(d, exist_ok=True)\n",
     "    pickle.dump(history, open(path, 'wb'))\n",
     "\n",
-    "\n",
     "def sample_params(space):\n",
     "    return {\n",
     "        'n_estimators':         random.randint(*space['n_estimators']),\n",
@@ -77,33 +76,55 @@
     "        'subsample':            random.uniform(*space['subsample']),\n",
     "        'colsample_bytree':     random.uniform(*space['colsample_bytree']),\n",
     "        'objective':            'binary:logistic',\n",
-    "        'eval_metric':          'aucpr',\n",
+    "        'eval_metric':          'aucpr',      # we keep AUCPR for early stopping\n",
     "        'random_state':         42,\n",
     "        'early_stopping_rounds': 50\n",
     "    }\n",
     "\n",
-    "\n",
     "def cv_macro_f1(params, X, y, sw, n_splits=5):\n",
     "    \"\"\"\n",
-    "    Returns the mean macro-F1 over n_splits stratified folds,\n",
-    "    using sample_weight `sw` on the training folds only.\n",
+    "    Returns the mean of each fold's best‐possible macro-F1, where\n",
+    "    each fold is allowed to sweep threshold from 0.01 to 0.99.\n",
     "    \"\"\"\n",
     "    skf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
-    "    scores = []\n",
+    "    fold_scores = []\n",
+    "\n",
+    "    # We'll search thresholds in [0.01, 0.99]\n",
+    "    thresh_candidates = np.arange(0.01, 1.00, 0.01)\n",
+    "\n",
     "    for tr_idx, val_idx in skf.split(X, y):\n",
+    "        # 1) Split for this fold\n",
+    "        X_tr_fold, X_val_fold = X[tr_idx], X[val_idx]\n",
+    "        y_tr_fold, y_val_fold = y[tr_idx], y[val_idx]\n",
+    "        sw_tr_fold, sw_val_fold = sw[tr_idx], sw[val_idx]\n",
+    "\n",
+    "        # 2) Train the XGBoost model on the training fold\n",
     "        model = xgb.XGBClassifier(**params)\n",
-    "        # Fit on training fold with class weights\n",
     "        model.fit(\n",
-    "            X[tr_idx], y[tr_idx],\n",
-    "            sample_weight=sw[tr_idx],\n",
-    "            eval_set=[(X[val_idx], y[val_idx])],\n",
-    "            sample_weight_eval_set=[sw[val_idx]],\n",
+    "            X_tr_fold,\n",
+    "            y_tr_fold,\n",
+    "            sample_weight = sw_tr_fold,\n",
+    "            eval_set = [(X_val_fold, y_val_fold)],\n",
+    "            sample_weight_eval_set = [sw_val_fold],\n",
     "            verbose=False\n",
     "        )\n",
-    "        # Predict on validation fold (threshold = 0.5)\n",
-    "        preds = (model.predict_proba(X[val_idx])[:, 1] >= 0.5).astype(int)\n",
-    "        scores.append(f1_score(y[val_idx], preds, average='macro'))\n",
-    "    return np.mean(scores)\n",
+    "\n",
+    "        # 3) Get probabilities on that fold's hold-out\n",
+    "        proba_val_fold = model.predict_proba(X_val_fold)[:, 1]\n",
+    "\n",
+    "        # 4) Sweep thresholds to pick best macro-F1 for this fold\n",
+    "        best_fold_f1 = 0.0\n",
+    "        for t in thresh_candidates:\n",
+    "            preds_t = (proba_val_fold >= t).astype(int)\n",
+    "            fold_f1 = f1_score(y_val_fold, preds_t, average='macro')\n",
+    "            if fold_f1 > best_fold_f1:\n",
+    "                best_fold_f1 = fold_f1\n",
+    "\n",
+    "        # 5) Record the best macro-F1 for this fold\n",
+    "        fold_scores.append(best_fold_f1)\n",
+    "\n",
+    "    # 6) Return the mean across folds\n",
+    "    return np.mean(fold_scores)\n",
     "\n",
     "\n",
     "def random_search_xgb_macro_f1(\n",
@@ -121,13 +142,13 @@
     "    X_val   = np.asarray(X_val)\n",
     "    X_test  = np.asarray(X_test)\n",
     "\n",
-    "    # 1) Encode labels once (binary: 0/1)\n",
+    "    # --- Encode once ---\n",
     "    le     = LabelEncoder().fit(y_train)\n",
     "    y_tr   = le.transform(y_train)\n",
     "    y_vale = le.transform(y_val)\n",
     "    y_te   = le.transform(y_test)\n",
     "\n",
-    "    # 2) Compute sample weights for train/val (balanced by class)\n",
+    "    # --- Compute sample weights (balanced) ---\n",
     "    sw_tr  = compute_sample_weight('balanced', y_tr)\n",
     "    sw_val = compute_sample_weight('balanced', y_vale)\n",
     "\n",
@@ -136,42 +157,40 @@
     "        while True:\n",
     "            iteration += 1\n",
     "            params = sample_params(param_space)\n",
-    "\n",
     "            key = json.dumps(params, sort_keys=True)\n",
     "            if key in history['tried_params']:\n",
     "                continue\n",
     "\n",
-    "            # A) CV macro-F1 on TRAIN only (no validation or test leakage)\n",
+    "            # (A) 5‐fold CV macro-F1 (each fold does its own threshold sweep)\n",
     "            f1_val = cv_macro_f1(params, X_train, y_tr, sw_tr, n_splits=5)\n",
     "\n",
-    "            # B) Train final model on TRAIN, early-stop on VAL\n",
+    "            # (B) Now train on the FULL training set, early‐stop on VAL (AUCPR)\n",
     "            model = xgb.XGBClassifier(**params)\n",
     "            model.fit(\n",
     "                X_train, y_tr,\n",
-    "                sample_weight=sw_tr,\n",
-    "                eval_set=[(X_val, y_vale)],\n",
-    "                sample_weight_eval_set=[sw_val],\n",
+    "                sample_weight = sw_tr,\n",
+    "                eval_set = [(X_val, y_vale)],\n",
+    "                sample_weight_eval_set = [sw_val],\n",
     "                verbose=False\n",
     "            )\n",
     "\n",
-    "            # C) Threshold calibration on VALIDATION to maximize macro-F1\n",
+    "            # (C) Find the single best threshold on VALIDATION to maximize macro-F1\n",
     "            val_probs = model.predict_proba(X_val)[:, 1]\n",
     "            best_thresh = 0.5\n",
     "            best_f1_val_thresh = 0.0\n",
-    "            # Sweep thresholds from 0.01 to 0.99 in 0.01 increments\n",
-    "            for thresh in np.arange(0.01, 1.00, 0.01):\n",
-    "                val_preds_thresh = (val_probs >= thresh).astype(int)\n",
-    "                f1_at_thresh = f1_score(y_vale, val_preds_thresh, average='macro')\n",
-    "                if f1_at_thresh > best_f1_val_thresh:\n",
-    "                    best_f1_val_thresh = f1_at_thresh\n",
-    "                    best_thresh = thresh\n",
+    "            for t in np.arange(0.01, 1.00, 0.01):\n",
+    "                val_preds_t = (val_probs >= t).astype(int)\n",
+    "                f1_val_t = f1_score(y_vale, val_preds_t, average='macro')\n",
+    "                if f1_val_t > best_f1_val_thresh:\n",
+    "                    best_f1_val_thresh = f1_val_t\n",
+    "                    best_thresh = t\n",
     "\n",
-    "            # D) Compute macro-F1 on TEST using best_thresh from validation\n",
+    "            # (D) Compute macro-F1 on TEST using that best_thresh\n",
     "            test_probs = model.predict_proba(X_test)[:, 1]\n",
     "            test_preds = (test_probs >= best_thresh).astype(int)\n",
     "            f1_test = f1_score(y_te, test_preds, average='macro')\n",
     "\n",
-    "            # Record metrics in history\n",
+    "            # Record the run in history\n",
     "            history['tried_params'][key] = {\n",
     "                'f1_val':          f1_val,\n",
     "                'threshold':       best_thresh,\n",
@@ -180,11 +199,11 @@
     "                'time':            time.time()\n",
     "            }\n",
     "\n",
-    "            # E) Update best: primary = f1_val, secondary = f1_test\n",
+    "            # (E) Update best if either (i) CV score improved or (ii) tie and test improved\n",
     "            best = history['best']\n",
-    "            better_f1_val    = f1_val > best['f1_val']\n",
-    "            tie_f1_val       = np.isclose(f1_val, best['f1_val'])\n",
-    "            better_f1_test   = f1_test > best.get('f1_test', 0.0)\n",
+    "            better_f1_val     = f1_val > best['f1_val']\n",
+    "            tie_f1_val        = np.isclose(f1_val, best['f1_val'])\n",
+    "            better_f1_test    = f1_test > best.get('f1_test', 0.0)\n",
     "            not_worse_f1_test = f1_test >= best.get('f1_test', 0.0)\n",
     "\n",
     "            if (better_f1_val and not_worse_f1_test) or (tie_f1_val and better_f1_test):\n",
@@ -199,7 +218,7 @@
     "                os.makedirs(os.path.dirname(best_model_bin) or '.', exist_ok=True)\n",
     "                model.save_model(best_model_bin)\n",
     "\n",
-    "                # Compute and print classification report on TEST\n",
+    "                # Print classification report on TEST at that best threshold\n",
     "                cr = classification_report(\n",
     "                    y_te,\n",
     "                    test_preds,\n",
@@ -211,8 +230,8 @@
     "                      f\"val_macro_f1_at_thresh={best_f1_val_thresh:.4f}, \"\n",
     "                      f\"test_macro_f1={f1_test:.4f}\")\n",
     "                print(\"            params =\", params)\n",
-    "                print(f\"            best threshold = {best_thresh:.2f}\")\n",
-    "                print(\"\\nClassification Report on TEST:\")\n",
+    "                print(f\"            best threshold = {best_thresh:.2f}\\n\")\n",
+    "                print(\"=== Classification Report on TEST ===\")\n",
     "                print(cr)\n",
     "\n",
     "            save_history(history, results_path)\n",
@@ -226,29 +245,7 @@
     "        print(f\"   f1_val_thresh    = {b['f1_val_thresh']:.4f}\")\n",
     "        print(f\"   f1_test          = {b['f1_test']:.4f}\")\n",
     "        print(f\"   params           = {b['params']}\")\n",
-    "        print(f\"   model            = {b['model_path']}\")\n",
-    "\n",
-    "\n",
-    "# ————————————————————————————————————————————————\n",
-    "# USAGE\n",
-    "\n",
-    "PARAM_SPACE = {\n",
-    "    'n_estimators':      (20, 200),\n",
-    "    'learning_rate':     (0.01, 0.3),\n",
-    "    'max_depth':         (2, 30),\n",
-    "    'subsample':         (0.5, 1.0),\n",
-    "    'colsample_bytree':  (0.5, 1.0),\n",
-    "}\n",
-    "\n",
-    "# To run the search, call:\n",
-    "# random_search_xgb_macro_f1(\n",
-    "#     X_train_B, y_train_B,\n",
-    "#     X_val_B,   y_val_B,\n",
-    "#     X_test_B,  y_test_B,\n",
-    "#     PARAM_SPACE,\n",
-    "#     'outputs/xgb_macro_f1_search_B.pkl',\n",
-    "#     'outputs/xgb_macro_f1_best_model_B.bin'\n",
-    "# )"
+    "        print(f\"   model            = {b['model_path']}\")"
    ]
   },
   {
@@ -418,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a769dbce",
    "metadata": {},
    "outputs": [
@@ -429,15 +426,18 @@
       "Loaded datasets from pickle files:\n",
       "X_train_B shape: (12023, 217)\n",
       "X_val_B shape: (6454, 217)\n",
-      "X_test_B shape: (6505, 217)\n",
-      "\n",
-      "🔸 Interrupted — best so far:\n",
-      "   f1_val           = 0.9980\n",
-      "   threshold (val)  = 0.14\n",
-      "   f1_val_thresh    = 0.7055\n",
-      "   f1_test          = 0.7154\n",
-      "   params           = {'n_estimators': 87, 'learning_rate': 0.18326080130483235, 'max_depth': 19, 'subsample': 0.5160305796757693, 'colsample_bytree': 0.9851685398243311, 'objective': 'binary:logistic', 'eval_metric': 'aucpr', 'random_state': 42, 'early_stopping_rounds': 50}\n",
-      "   model            = outputs/xgb_macro_f1_best_model_B.bin\n"
+      "X_test_B shape: (6505, 217)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'PARAM_SPACE' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 21\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX_test_B shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mX_test_B\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     16\u001b[0m     \u001b[38;5;66;03m# Now call the random search function with the loaded data\u001b[39;00m\n\u001b[1;32m     17\u001b[0m     random_search_xgb_macro_f1(\n\u001b[1;32m     18\u001b[0m         X_train_B, y_train_B,\n\u001b[1;32m     19\u001b[0m         X_val_B,   y_val_B,\n\u001b[1;32m     20\u001b[0m         X_test_B,  y_test_B,\n\u001b[0;32m---> 21\u001b[0m         \u001b[43mPARAM_SPACE\u001b[49m,\n\u001b[1;32m     22\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124moutputs/xgb_macro_f1_search_B.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     23\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124moutputs/xgb_macro_f1_best_model_B.bin\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     24\u001b[0m     )\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError: Dataset files not found in \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moutputs/\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m directory.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'PARAM_SPACE' is not defined"
      ]
     }
    ],
@@ -457,14 +457,25 @@
     "    print(f\"X_val_B shape: {X_val_B.shape}\")\n",
     "    print(f\"X_test_B shape: {X_test_B.shape}\")\n",
     "    \n",
+    "    PARAM_SPACE = {\n",
+    "        'n_estimators':      (20, 200),\n",
+    "        'learning_rate':     (0.01, 0.3),\n",
+    "        'max_depth':         (2, 30),\n",
+    "        'subsample':         (0.5, 1.0),\n",
+    "        'colsample_bytree':  (0.5, 1.0),\n",
+    "    }\n",
+    "\n",
+    "    RESULTS_PICKLE   = \"outputs/xgb_macro_f1_search_B.pkl\"\n",
+    "    BEST_MODEL_BIN   = \"outputs/xgb_macro_f1_best_model_B.bin\"\n",
+    "    \n",
     "    # Now call the random search function with the loaded data\n",
     "    random_search_xgb_macro_f1(\n",
     "        X_train_B, y_train_B,\n",
     "        X_val_B,   y_val_B,\n",
     "        X_test_B,  y_test_B,\n",
     "        PARAM_SPACE,\n",
-    "        'outputs/xgb_macro_f1_search_B.pkl',\n",
-    "        'outputs/xgb_macro_f1_best_model_B.bin'\n",
+    "        RESULTS_PICKLE,\n",
+    "        BEST_MODEL_BIN\n",
     "    )\n",
     "\n",
     "else:\n",
@@ -474,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "25e3bd39",
    "metadata": {},
    "outputs": [
