--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1,19 +1,6 @@
 @article{netwok2020,
-  title={At-scale impact of the {Net Wok}: A culinarically holistic investigation of distributed dumplings},
-  author={Astley, Rick and Morris, Linda},
-  journal={Armenian Journal of Proceedings},
-  volume={61},
-  pages={192--219},
-  year=2020,
-  publisher={Automatic Publishing Inc.}
-}
-
-@article{netwok2022,
-  title={{Net Wok}++: Taking distributed dumplings to the cloud},
-  author={Morris, Linda and Astley, Rick},
-  journal={Armenian Journal of Proceedings},
-  volume={65},
-  pages={101--118},
-  year=2022,
-  publisher={Automatic Publishing Inc.}
+  title={Automatic and interpretable prediction of the site of origin in outflow tract ventricular arrhythmias: machine learning integrating electrocardiograms and clinical data},
+  author={Bocanegra-Pérez, ÁJ and Piella, G and Sebastian, R and Jimenez-Perez, G and Falasconi, G and Saglietto, A and Soto-Iglesias, D and Berruezo, A and Penela, D and Camara, O},
+  journal={Front. Cardiovasc. Med. 11:1353096},
+  year=2024,
 }
