--- a/report/refs.bib
+++ b/report/refs.bib
@@ -4,3 +4,15 @@
   journal={Front. Cardiovasc. Med. 11:1353096},
   year=2024,
 }
+
+@article{doste2022training,
+  title={Training machine learning models with synthetic data improves the prediction of ventricular origin in outflow tract ventricular arrhythmias},
+  author={Doste, R and Lozano, M and Jimenez-Perez, G and Mont, L and Berruezo, A and Penela, D and Camara, O and Sebastian, R},
+  journal={Front Physiol},
+  volume={13},
+  pages={909372},
+  year={2022},
+  doi={10.3389/fphys.2022.909372},
+  pmid={36035489},
+  pmcid={PMC9412034}
+}
