--- a/report/refs.bib
+++ b/report/refs.bib
@@ -1,4 +1,4 @@
-@article{netwok2020,
+@article{bocanegra,
   title={Automatic and interpretable prediction of the site of origin in outflow tract ventricular arrhythmias: machine learning integrating electrocardiograms and clinical data},
   author={Bocanegra-Pérez, ÁJ and Piella, G and Sebastian, R and Jimenez-Perez, G and Falasconi, G and Saglietto, A and Soto-Iglesias, D and Berruezo, A and Penela, D and Camara, O},
   journal={Front. Cardiovasc. Med. 11:1353096},
@@ -15,4 +15,46 @@
   doi={10.3389/fphys.2022.909372},
   pmid={36035489},
   pmcid={PMC9412034}
+}
+
+@misc{umn2025cardiacvalvenomenclature,
+  author       = {{University of Minnesota. VHLab}},
+  title        = {Anatomy Tutorial – Cardiac Valve Nomenclature},
+  year         = {2025},
+  howpublished = {\url{https://www.vhlab.umn.edu/atlas/anatomy-tutorial/cardiac-valve-nomenclature.shtml}},
+  note         = {Accessed: June 5, 2025},
+}
+
+@article{anderson2019,
+  author = "Anderson, R. D. and Kumar, S. and Parameswaran, R. and Wong, G. and Voskoboinik, A. and Sugumar, H. and Watts, T. and Sparks, P. B. and Morton, J. B. and McLellan, A. and Kistler, P. M. and Kalman, J. and Lee, G.",
+  title = "Differentiating Right- and Left-Sided Outflow Tract Ventricular Arrhythmias",
+  journal = "Circulation: Arrhythmia and Electrophysiology",
+  year = 2019,
+  volume = 12,
+  number = 6,
+  doi = "10.1161/circep.119.007392",
+}
+
+
+@article{strickberger2001,
+  author = "Strickberger, S. A. and Daoud, E. G. and Man, K. C. and Niebauer, M. J. and Semelka, R. C. and Josephson, M. E.",
+  title = "Focal Atrial Tachycardia Arising From the Pulmonary Veins",
+  journal = "Journal of Cardiovascular Electrophysiology",
+  year = 2001,
+  volume = 12,
+  number = 11,
+  pages = "1215--1221",
+  doi = "10.1046/j.1540-8167.2001.01309.x"
+}
+
+@article{marchlinski2017outflow,
+  author = {Santangeli, P and Marchlinski, FE},
+  title = {Outflow tract ventricular arrhythmias: Anatomical considerations and ablation strategies},
+  journal = {Heart Rhythm},
+  year = 2017,
+  month = {Sep},
+  volume = 14,
+  number = 9,
+  pages = {1367--1377},
+  doi = {10.1016/j.hrthm.2017.05.030}
 }
